tests/multi_return_return_arity_bad.stderr
tests/multi_return_return_arity_bad.hop:3:9: error: HOP2004: type mismatch
